fixed recomendations
