# config/routes.rb
@@ -106,6 +106,7 @@ Rails.application.routes.draw do
       # Homepage
       get 'homepage/slider/main', to: 'homepage#slider_main'
       get 'homepage/slider/banners', to: 'homepage#slider_banners'
+      get 'homepage/recommendations', to: 'homepage#recommendations'
 
       # Cart
       resource :cart, controller: 'cart', only: [:show] do
